Fix grammatical ambiguity (h/t @EwonRael)

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <img src="https://raw.githubusercontent.com/MFEK/docs/master/blob/logo.png" width="250">
         <div>
             <h1 id="modular-font-editor-k">Modular <nobr>Font Editor K</nobr></h1>
-            <p><strong>Modular Font Editor K</strong> (MFEK) is an open source (Apache 2.0 licensed) modular font editor. It attempts to apply the Unix adage that each program should do one thing and do it well to a GUI font editor.</p>
-            <p>MFEK is still very alpha, and many parts are missing (including a good website!). You can help!</p>
+            <p><strong>Modular Font Editor K</strong> (MFEK) is an open source (Apache 2.0 licensed) modular font editor. It attempts to apply the Unix adage that each program should “do one thing and do it well” to a GUI font editor.</p>
+            <p>MFEK is still alpha, and many parts are missing (including a good website!). You can help!</p>
         </div>
     </header> 
     <div id="why">
