Fix image situation, stop using a third party host
@brigazvi's commit piggybacked off of Unsplash without me noticing

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <footer>
         <p>Development of MFEK is suppported by its community through the Modular Font Editor K Foundation, Incorporated, d/b/a <a href="https://foundation.mfek.org/">MFEK Foundation Inc.</a>, a New Jersey non-profit corporation (№0450797197) headquartered in Atlantic City, New Jersey, USA.</p>
         <p>Fredrick R. Brennan &lt;<a href="mailto:&quot;Fredrick R. Brennan&quot;&lt;copypaste@kittens.ph&gt;?subject=[MFEK%F0%9F%94%A3%EF%B8%8E]">copypaste@kittens.ph</a>&gt; both chairs the nonprofit and is the lead developer of the project.</p>
+        <p>Photo credits: Raphael Schaller and Kristian Strand, both via Unsplash</p>
     </footer>
 </body>
 </html>
