--- a/foundation/index.html
+++ b/foundation/index.html
@@ -31,9 +31,10 @@ layout: default_foundation
 <li class="bounty">CUDA Vanity Monero Address Generator (<em><a href="https://github.com/SChernykh/vanity_xmr_cuda">completed</a></em>)<br/>Awardee: Sergey Chernykh (Сергей Черных) / @sech1 (Libera IRC)</li>
 <li>MFEK Serif Font (<em>in progress</em>)<br/>Awardee: Indestructible Type</li>
 <li>macOS Code Signing (at least for MFEKglif) (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)</li>
-<li>Visual TrueType Rewrite (<em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">open for bids</a></em>)
+<li>This space reserved</li>
 <li>Bézier Simplification for MFEKpathops (<em><strong>failed</strong>—pending reassignment or revocation</em>)</li>
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a> (<em><abbr title="Offered 2022-04-21.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
+<li>Visual TrueType Rewrite (<em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">open for bids</a></em>)
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
 <li class="TBD"></li>
 </ol>
