Withdraw Grant № 6, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -34,7 +34,7 @@ layout: default_foundation
 <li>libspiro port (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)</li>
 <li>Bézier Simplification for MFEKpathops (<em><strong>failed</strong>—pending reassignment or revocation</em>)</li>
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a> (<em><abbr title="Offered 2022-04-21.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
-<li>Visual TrueType Rewrite (<em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">open for bids</a></em>)
+<li><s>Visual TrueType Rewrite</s> (<em>withdrawn</em>; see <em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">archived bid invite</a></em>)
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
 <li class="TBD"></li>
 </ol>
