--- a/foundation/index.html
+++ b/foundation/index.html
@@ -38,6 +38,18 @@ layout: default_foundation
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
 <li class="TBD"></li>
 </ol>
+
+<h1>Donations</h1>
+
+<p>Besides its grants, the Foundation also makes charitable contributions to developers with no expectation of tangible return, because it believes the intangible benefits to libre fonts of these donations are worth it.</p>
+
+<p>As grants, these payments may be referred to as «MFEK Foundation Donation № X, Series of YYYY», though there should be less reason to do so.</p>
+
+<h2>Series of 2022</h2>
+<ol>
+      <li>Unicode Consortium — Adopt-a-Character (Gold): U+0051 ‹Q› — $5,000</li>
+      <li>Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em>ongoing @ $1000/month</em></li>
+</ol>
 <h1>GnuPG keys</h1>
 
 So far there is only one GnuPG key in use, for signing certain grants and bounty proposals—
