--- a/foundation/index.html
+++ b/foundation/index.html
@@ -29,7 +29,7 @@ layout: default_foundation
 <h2>Series of 2022</h2>
 <ol class="grants 2022">
 <li class="bounty">CUDA Vanity Monero Address Generator (<em><a href="https://github.com/SChernykh/vanity_xmr_cuda">completed</a></em>)<br/>Awardee: Sergey Chernykh (Сергей Черных) / @sech1 (Libera IRC)</li>
-<li>MFEK Serif Font (<em>in progress</em>)<br/>Awardee: Indestructible Type</li>
+<li>MFEK Serif Font (<em><a href="https://github.com/indestructible-type/Besley/commit/c87ddc8b1d852033865cb52680b6bddb3da1b943">completed</a></em>)<br/>Awardee: Indestructible Type</li>
 <li>macOS Code Signing (at least for MFEKglif) (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)</li>
 <li>libspiro port (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)</li>
 <li>Bézier Simplification for MFEKpathops (<em><strong>failed</strong>—pending reassignment or revocation</em>)</li>
