--- a/foundation/index.html
+++ b/foundation/index.html
@@ -36,6 +36,7 @@ layout: default_foundation
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a> (<em><abbr title="Offered 2022-04-21.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
 <li><s>Visual TrueType Rewrite</s> (<em>withdrawn</em>; see <em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">archived bid invite</a></em>)
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
+<li>MFEKglif Additional Pens API<br/>Awardee: Matthew Blanchard</li>
 <li class="TBD"></li>
 </ol>
 
