List Donation № 2, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -50,6 +50,7 @@ layout: default_foundation
 <ol>
       <li>Unicode Consortium — Adopt-a-Character (Gold): U+0051 ‹Q› — $5,000</li>
       <li>Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em>ongoing @ $1000/month</em></li>
+      <li>Donk Enby (as part of a <a href="https://fundrazr.com/free-donk?ref=ab_2BL1U9_ab_48NtY9cTYmv48NtY9cTYmv">fundraising campaign</a> run by DDoS Secrets) — €1,081.72 <small>(€1,000 + fees)</small></li>
 </ol>
 <h1>GnuPG keys</h1>
 
