General style update

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -3,7 +3,7 @@ layout: default_foundation
 ---
 <h1><em>Saluton!</em></h1>
 
-<p>The <sc><strong>Modular Font Editor K Foundation Inc.</strong></sc>, №&nbsp;0450797197, <abbr title="doing business as">d/b/a</abbr> the <strong>MFEK Foundation</strong>, is a New Jersey non-profit headquartered in Atlantic City.</p>
+<p>The <sc><strong>Modular Font Editor K Foundation Inc.</strong></sc>, <numero>0450797197</numero>, <abbr title="doing business as">d/b/a</abbr> the <strong>MFEK Foundation</strong>, is a New Jersey non-profit headquartered in Atlantic City.</p>
 
 <p>Its current chairman is Fredrick R. Brennan &lt;<a href="mailto:&quot;Fredrick R. Brennan&quot;&lt;copypaste@kittens.ph&gt;?subject=[MFEK%F0%9F%94%A3%EF%B8%8E]">copypaste@kittens.ph</a>&gt;.</p>
 
@@ -16,41 +16,71 @@ layout: default_foundation
 <h1>Grants</h1>
 <p>Below are all grants the foundation has given out in the service of free software. If you have an idea you want funded send proposals to Fred. Proposals may not be accepted; proposals having nothing to do with libre fonts software will be ignored.</p>
 
-<p>In the below list, a grant is considered <em>reassigned</em> if it originally had one author but was not completed. A grant is considered <em>revoked</em> if the Foundation's chairman (Fred) does the work himself.</p>
+<p>In the below list, a grant is considered <em>reassigned</em> if it originally had one author but was not completed. A grant is considered <em>revoked</em> if the Foundation’s chairman (Fred) does the work himself.</p>
 
-<p>To refer to one of our grants use the style «MFEK Foundation Grant № X, Series of YYYY». Grant numbers are immutable.</p>
+<p>To refer to one of our grants use the style «MFEK Foundation Grant <numero>X</numero>, Series of YYYY». Grant numbers are immutable.</p>
 
-<p>If a grant's index is preceded by <sc>modifier letter small b</sc>, U+1D47 ‹&#x1d47;›, it means that the grant was awarded via bounty, not traditional bid/counterbid negotiation.</p>
+<p>If a grant’s index is preceded by <sc>modifier letter small b</sc>, U+1D47 <char>&#x1d47;</char>, it means that the grant was awarded via bounty, not traditional bid/counterbid negotiation.</p>
 
 <h2>Series of 2021 (pre-Foundation)</h2>
 <ol class="grants 2021">
 <li>MFEKstroke (<em><a href="https://github.com/MFEK/stroke">completed</a></em>)<br/>Awardee: Matthew Blanchard</li>
 </ol>
+<div class="series-end">
+      <span class="sc strong">end of series</span>
+</div>
 <h2>Series of 2022</h2>
-<ol class="grants 2022">
-<li class="bounty">CUDA Vanity Monero Address Generator (<em><a href="https://github.com/SChernykh/vanity_xmr_cuda">completed</a></em>)<br/>Awardee: Sergey Chernykh (Сергей Черных) / @sech1 (Libera IRC)</li>
-<li>MFEK Serif Font (<em><a href="https://github.com/indestructible-type/Besley/commit/c87ddc8b1d852033865cb52680b6bddb3da1b943">completed</a></em>)<br/>Awardee: Indestructible Type</li>
-<li>macOS Code Signing (at least for MFEKglif) (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)</li>
-<li>libspiro port (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)</li>
-<li>Bézier Simplification for MFEKpathops (<em><strong>failed</strong>—pending reassignment or revocation</em>)</li>
-<li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a> (<em><abbr title="Offered 2022-04-21.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
-<li><s>Visual TrueType Rewrite</s> (<em>withdrawn</em>; see <em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">archived bid invite</a></em>)
-<li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
-<li>MFEKglif Additional Pens API<br/>Awardee: Matthew Blanchard</li>
-<li class="TBD"></li>
+<ol class="grants 2022 spaced_out">
+<bounty></bounty><marker></marker>
+<li>
+      <span>CUDA Vanity Monero Address Generator (<em><a href="https://github.com/SChernykh/vanity_xmr_cuda">completed</a></em>)</span>
+      <br/><span>Awardee: Sergey Chernykh (Сергей Черных) / @sech1 (Libera IRC)</span>
+</li>
+<marker></marker>
+<li>
+      <span>MFEK Serif Font (<em><a href="https://github.com/indestructible-type/Besley/commit/c87ddc8b1d852033865cb52680b6bddb3da1b943">completed</a></em>)</span><br/>
+      <span>Awardee: Indestructible Type</span>
+</li>
+<marker></marker>
+<li>
+      macOS Code Signing (at least for MFEKglif) (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)
+</li>
+<marker></marker>
+<li>
+      libspiro port (<em><abbr title="As of 28th June 2022. More information to come.">in limbo</abbr></em>)
+</li>
+<marker></marker>
+<li><s>Bézier Simplification for MFEKpathops</s> (<em>revoked</em>)</li>
+<bounty></bounty>
+<marker></marker>
+<li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a><bux>($5,000)</bux> (<em><abbr title="Offered 2022-04-21.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
+<marker></marker>
+<li><s>Visual TrueType Rewrite</s> (<em>withdrawn</em>; see <em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">archived bid invite</a></em>)</li>
+<bounty></bounty>
+<marker></marker>
+<li><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a><bux>($350)</bux> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
+<marker></marker>
+<li><span>MFEKglif Additional Pens API</span><br/><span>Awardee: Matthew Blanchard</span></li>
+<marker class="TBD"></marker>
+<li>TBD</li>
 </ol>
 
 <h1>Donations</h1>
 
 <p>Besides its grants, the Foundation also makes charitable contributions to developers with no expectation of tangible return, because it believes the intangible benefits to libre fonts of these donations are worth it.</p>
 
-<p>As grants, these payments may be referred to as «MFEK Foundation Donation № X, Series of YYYY», though there should be less reason to do so.</p>
+<p>As grants, these payments may be referred to as «MFEK Foundation Donation <numero>X</numero>, Series of YYYY», though there should be less reason to do so.</p>
 
 <h2>Series of 2022</h2>
-<ol>
-      <li>Unicode Consortium — Adopt-a-Character (Gold): U+0051 ‹Q› — $5,000</li>
-      <li>Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em>ongoing @ $1000/month</em></li>
-      <li>Donk Enby (as part of a <a href="https://fundrazr.com/free-donk?ref=ab_2BL1U9_ab_48NtY9cTYmv48NtY9cTYmv">fundraising campaign</a> run by DDoS Secrets) — €1,081.72 <small>(€1,000 + fees)</small></li>
+<ol class="donations 2022 spaced_out">
+      <marker></marker><li>
+            Unicode Consortium — Adopt-a-Character (Gold): U+0051 ‹Q› — <bux>$5,000</bux></li>
+      <marker></marker><li>
+            Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em></li>
+      <marker></marker><li>
+            Donk Enby (as part of a <a href="https://fundrazr.com/free-donk?ref=ab_2BL1U9_ab_48NtY9cTYmv48NtY9cTYmv">fundraising campaign</a> run by DDoS Secrets) — <bux><abbr title="(€1,000 + fees)">€1,081.72</abbr></bux></li>
+      <marker class=TBD></marker>
+<li>TBD</li>
 </ol>
 <h1>GnuPG keys</h1>
 
