List Donation № 4, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -81,6 +81,8 @@ layout: default_foundation
             Donk Enby (as part of a <a href="https://fundrazr.com/free-donk?ref=ab_2BL1U9_ab_48NtY9cTYmv48NtY9cTYmv">fundraising campaign</a> run by DDoS Secrets) — <bux><abbr title="(€1,000 + fees)">€1,081.72</abbr></bux></li>
       <marker></marker><li>
             Caleb Maclennan (SILE developer <tt>@alerque</tt>) (GitHub) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 10 May 2022)</li>
+      <marker></marker><li>
+            Jonathon Thomas / OpenShot Studios, LLC (OpenShot developer <tt>@jonoomph</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 24 July 2022)</li>
       <marker class=TBD></marker>
 <li>TBD</li>
 </ol>
