List Grant № 9, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -61,6 +61,8 @@ layout: default_foundation
 <li><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a><bux>($350)</bux> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
 <marker></marker>
 <li><span>MFEKglif Additional Pens API</span><br/><span>Awardee: Matthew Blanchard</span></li>
+<marker></marker>
+<li><span>System administration services for <u>BITMAPFONTS.ORG</u> &amp; <abbr title="Fediverse to be technical.">Mastodon</abbr>←→Twitter bridge for @MFEKglif (&amp;c.) (<em>in progress</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
 <marker class="TBD"></marker>
 <li>TBD</li>
 </ol>
