Tweak lead of fndn idx

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -7,11 +7,11 @@ layout: default_foundation
 
 <p>Its current chairman is Fredrick R. Brennan &lt;<a href="mailto:&quot;Fredrick R. Brennan&quot;&lt;copypaste@kittens.ph&gt;?subject=[MFEK%F0%9F%94%A3%EF%B8%8E]">copypaste@kittens.ph</a>&gt;.</p>
 
-<p>Among its assets are the domain <tt>mfek.org</tt>.</p>
+<p>Among its assets are the domain <tt>mfek.org</tt>, which this site is on!</p>
 
-<p>The Foundation plans to spend $100,000 in 2022 on fonts-related software. Please check back for grant announcements—this website is under construction.</p>
+<p>The Foundation has a target budget of $100,000 yearly on fonts-related software. Please check back for grant announcements—this website is frequently updated.</p>
 
-<p>All Foundation-sponsored software is licensed under the Apache 2.0 license. Foundation-sponsored fonts are dual-licensed Apache 2.0 and SIL Open Font License.</p>
+<p>All Foundation-sponsored software is licensed under the Apache 2.0 license. Foundation-sponsored fonts are licensed under the SIL Open Font License.</p>
 
 <h1>Grants</h1>
 <p>Below are all grants the foundation has given out in the service of free software. If you have an idea you want funded send proposals to Fred. Proposals may not be accepted; proposals having nothing to do with libre fonts software will be ignored.</p>
@@ -39,7 +39,7 @@ layout: default_foundation
 <marker></marker>
 <li>
       <span>MFEK Serif Font (<em><a href="https://github.com/indestructible-type/Besley/commit/c87ddc8b1d852033865cb52680b6bddb3da1b943">completed</a></em>)</span><br/>
-      <span>Awardee: Indestructible Type</span>
+      <span>Awardee: Indestructible Type LLC</span>
 </li>
 <marker></marker>
 <li>
