--- a/foundation/index.html
+++ b/foundation/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default_foundation
 ---
-<h1><em>Saluton!</em></h1>
+<h1>
+  <em>Saluton!</em>
+</h1>
 
 <p>The <sc><strong>Modular Font Editor K Foundation Inc.</strong></sc>, <numero>0450797197</numero>, <abbr title="doing business as">d/b/a</abbr> the <strong>MFEK Foundation</strong>, is a New Jersey non-profit headquartered in Atlantic City.</p>
 
