--- a/foundation/index.html
+++ b/foundation/index.html
@@ -65,6 +65,8 @@ layout: default_foundation
 <li><span>MFEKglif Additional Pens API</span><br/><span>Awardee: Matthew Blanchard</span></li>
 <marker></marker>
 <li><span>System administration services for <u>BITMAPFONTS.ORG</u> &amp; <abbr title="Fediverse to be technical.">Mastodon</abbr>←→Twitter bridge for @MFEKglif (&amp;c.) (<em>in progress</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
+<marker></marker>
+<li><span>MFEK Serif Greek Expansion (<em>in progress</em>)</span><br/><span>Awardee: Indestructible Type LLC</span></li>
 <marker class="TBD"></marker>
 <li>TBD</li>
 </ol>
