--- a/foundation/index.html
+++ b/foundation/index.html
@@ -67,6 +67,10 @@ layout: default_foundation
 <li><span>System administration services for <u>BITMAPFONTS.ORG</u> &amp; <abbr title="Fediverse to be technical.">Mastodon</abbr>←→Twitter bridge for @MFEKglif (&amp;c.) (<em>in progress</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
 <marker></marker>
 <li><span>MFEK Serif Greek Expansion (<em>in progress</em>)</span><br/><span>Awardee: Indestructible Type LLC</span></li>
+<marker></marker>
+<li><span><a href="https://github.com/lucasmerlin/egui_skia"><code>egui_skia.rlib</code></a> v1.0 (SDL2, OpenGL, Vulkan<dagger></dagger>) (<em>in progress</em>)</span><br/><span>Awardee: Lucas Meurer</span>
+      <ul class="grant-notes"><li><dagger></dagger><span>Stretch goal.</span></li></ul>
+</li>
 <marker class="TBD"></marker>
 <li>TBD</li>
 </ol>
