--- a/foundation/index.html
+++ b/foundation/index.html
@@ -64,7 +64,7 @@ layout: default_foundation
 <marker></marker>
 <li><span>MFEKglif Additional Pens API (<em>due in December 1<sup>st</sup></em>)</span><br/><span>Awardee: Matthew Blanchard</span></li>
 <marker></marker>
-<li><span>System administration services for <u>BITMAPFONTS.ORG</u> &amp; <abbr title="Fediverse to be technical.">Mastodon</abbr>←→Twitter bridge for @MFEKglif (&amp;c.) (<em>in progress</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
+<li><span>Upkeep of the Fediverse instance <a href="https://howlr.me">howlr.me</a> (<em>completed</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
 <marker></marker>
 <li><span>MFEK Serif Greek Expansion (<em>in progress</em>)</span><br/><span>Awardee: Indestructible Type LLC</span></li>
 <marker></marker>
