Mark completed Grant № 11, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -68,8 +68,8 @@ layout: default_foundation
 <marker></marker>
 <li><span>MFEK Serif Greek Expansion (<em>in progress</em>)</span><br/><span>Awardee: Indestructible Type LLC</span></li>
 <marker></marker>
-<li><span><a href="https://github.com/lucasmerlin/egui_skia"><code>egui_skia.rlib</code></a> v1.0 (SDL2, OpenGL, Vulkan<dagger></dagger>) (<em>in progress</em>)</span><br/><span>Awardee: Lucas Meurer</span>
-      <ul class="grant-notes"><li><dagger></dagger><span>Stretch goal.</span></li></ul>
+<li><span><a href="https://github.com/lucasmerlin/egui_skia"><code>egui_skia.rlib</code></a> v1.0 (SDL2, OpenGL, Vulkan<dagger></dagger>) (<em>completed</em>)</span><br/><span>Awardee: Lucas Meurer</span>
+      <ul class="grant-notes"><li><dagger></dagger><span>Stretch goal (<em>completed</em>).</span></li></ul>
 </li>
 <marker></marker>
 <li><span>System administration work: <a href="https://mfek.jitsi.org">Jitsi Meet instance</a>; Mastodon←→Twitter bridge</span><br/><span>Awardee: Cleveland Digital Self Defense Collective</span></li>
