List and mark completed Grant № 13, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -73,6 +73,8 @@ layout: default_foundation
 </li>
 <marker></marker>
 <li><span>System administration work: <a href="https://mfek.jitsi.org">Jitsi Meet instance</a>; Mastodon←→Twitter bridge</span><br/><span>Awardee: Cleveland Digital Self Defense Collective</span></li>
+<marker></marker>
+<li><span><a href="/misc/four-freedoms.html">The Four Freedoms of Free Software</a> artwork (<em>completed</em>)</span><br/><span>Awardee: LAV (@<a href="https://twitter.com/lilblucat">lilblucat</a>)</span></li>
 <marker class="TBD"></marker>
 <li>TBD</li>
 </ol>
