--- a/misc/four-freedoms.html
+++ b/misc/four-freedoms.html
@@ -1,15 +1,19 @@
 <html>
     <head>
         <title>The Four Freedoms of Free Software — MFEK Foundation Inc.</title>
+        <link rel="stylesheet" href="/css/fonts.css">
+        <link rel="stylesheet" href="/foundation/css/default.css">
+    </head>
+    <head>
     </head>
     <body>
 <h1 id="the-four-freedoms-of-free-software">The Four Freedoms of Free Software</h1>
 <ul>
 <li>Art by LAV (<span class="citation" data-cites="lilblucat">@lilblucat</span> — <a href="https://twitter.com/lilblucat" class="uri">https://twitter.com/lilblucat</a>)</li>
-<li>Typeset in the font MFEK Serif (<a href="https://github.com/MFEK/MFEK-Serif.otf" class="uri">https://github.com/MFEK/MFEK-Serif.otf</a>) by Owen Earl (Indestructible Type LLC)</li>
+<li>Typeset in MFEK Serif (<a href="https://github.com/MFEK/MFEK-Serif.otf" class="uri">https://github.com/MFEK/MFEK-Serif.otf</a>) by Owen Earl (Indestructible Type LLC)</li>
 </ul>
 <p><img src='./4freedoms/The Four Freedoms of Free Software (standalone, WebP embedded).svg' width=600></p>
-<h1 id="license">License</h1>
+<h2 id="license">License</h2>
 <ul>
 <li>This is free artwork! Licensed under the terms of the Creative Commons Attribution ShareAlike License 4.0.</li>
 <li>© 2022 Modular Font Editor K Foundation, Inc. of Atlantic City, NJ</li>
