Mark completed Grant № ᵇ7, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -60,7 +60,7 @@ layout: default_foundation
 <li><s>Visual TrueType Rewrite</s> (<em>withdrawn</em>; see <em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">archived bid invite</a></em>)</li>
 <bounty></bounty>
 <marker></marker>
-<li><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a><bux>($350)</bux> (<em><abbr title="Offered 2022-04-25.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
+<li><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a><bux>($350)</bux> (<em><abbr title="Offered 2022-04-25.">completed</abbr></em>)<br/><span>Awardee: Khaled Hosny</span></li>
 <marker></marker>
 <li><span>MFEKglif Additional Pens API (<em>due in December 1<sup>st</sup></em>)</span><br/><span>Awardee: Matthew Blanchard</span></li>
 <marker></marker>
