--- a/foundation/index.html
+++ b/foundation/index.html
@@ -55,7 +55,9 @@ layout: default_foundation
 <li><s>Bézier Simplification for MFEKpathops</s> (<em>revoked</em>)</li>
 <bounty></bounty>
 <marker></marker>
-<li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a><bux>($5,000)</bux> (<em><abbr title="Offered 2022-04-21.">in progress</abbr>; check link for details &amp; discussion</em>)</li>
+<li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a><bux>($5,000)</bux> (<em><abbr title="Offered 2022-04-21.">claimed</abbr>; check link for details &amp; discussion</em>)<br/><span>Awardee: Khaled Hosny<dagger></dagger></span>
+      <ul class="grant-notes"><li><dagger></dagger><span>Presumptive; work is far along.</span></ul>
+</li>
 <marker></marker>
 <li><s>Visual TrueType Rewrite</s> (<em>withdrawn</em>; see <em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">archived bid invite</a></em>)</li>
 <bounty></bounty>
