Mark withdrawn Grant № 2, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -45,7 +45,7 @@ layout: default_foundation
 </li>
 <marker></marker>
 <li>
-      macOS Code Signing (at least for MFEKglif) (<em>in progress</em>)<br/>Awardee: Seth / @Subject38 (GitHub)
+      macOS Code Signing (<em>withdrawn after payment</em>)<br/>Former awardee: Seth Erfurt / @Subject38 (GitHub)<br/><p class="extended-comment"><small>Apple makes code signing too difficult. Spending the Foundation's money on a macOS developer key is both unfeasible and immoral. The number of hoops to jump through proved insurmountable. If a user wishes to sign MFEK's binaries, similar to how the FFmpeg project deals with Apple, they are free to, but there are no current plans to reinstate this grant.</p></small>
 </li>
 <marker></marker>
 <li>
