Mark revoked Grant № 3, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -49,7 +49,7 @@ layout: default_foundation
 </li>
 <marker></marker>
 <li>
-      libspiro port (<em><abbr title="As of 28th June 2022. More information to come.">in limbo</abbr></em>)
+      <s>libspiro port</s> (<em>revoked</em>)<br/><p class="extended-comment"><small>This became <a href="https://github.com/MFEK/spiro.rlib">MFEK/spiro.rlib</a>. Due to the determination that MFEK Foun&shy;dation Grant № 2, Series of 2022 could not move forward, Seth Erfurt contributed a very useful patch to this which helped get it out of limbo and into production. So we consider the payment rendered originally for № 2–2022 to actually apply to № 3–2022, meaning the Foundation is not out any money.</p></small>
 </li>
 <marker></marker>
 <li><s>Bézier Simplification for MFEKpathops</s> (<em>revoked</em>)</li>
