Mark completed Grant № 4, Series of 2022
(Honorary completion.)

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -52,7 +52,7 @@ layout: default_foundation
       <s>libspiro port</s> (<em>revoked</em>)<br/><p class="extended-comment"><small>This became <a href="https://github.com/MFEK/spiro.rlib">MFEK/spiro.rlib</a>. Due to the determination that MFEK Foun&shy;dation Grant № 2, Series of 2022 could not move forward, Seth Erfurt contributed a very useful patch to this which helped get it out of limbo and into production. So we consider the payment rendered originally for № 2–2022 to actually apply to № 3–2022, meaning the Foundation is not out any money.</p></small>
 </li>
 <marker></marker>
-<li><s>Bézier Simplification for MFEKpathops</s> (<em>revoked</em>)</li>
+<li>Bézier Simplification for MFEKpathops (<em><a href="https://github.com/MFEK/kurbo.rlib/pull/1">completed</a></em>)<br/>Honorary awardee<dagger></dagger>: Raph Linus Levien PhD<p class=extended-comment><small><dagger></dagger>Levien did his work neither for us nor to satisfy any terms of any of our grants, and perhaps did not know of the existence of a relevant grant in the problem domain he was working on. His work just happened to be <em>exactly</em> what we had been requesting. Offered the face value of the grant via e-mail, he declined graciously.</small></p></li>
 <bounty></bounty>
 <marker></marker>
 <li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a><bux>($5,000)</bux> (<em><abbr title="Offered 2022-04-21.">claimed</abbr>; check link for details &amp; discussion</em>)<br/><span>Awardee: Khaled Hosny<dagger></dagger></span>
