Mark completed Grant № ᵇ5, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -55,8 +55,8 @@ layout: default_foundation
 <li>Bézier Simplification for MFEKpathops (<em><a href="https://github.com/MFEK/kurbo.rlib/pull/1">completed</a></em>)<br/>Honorary awardee<dagger></dagger>: Raph Linus Levien PhD<p class=extended-comment><small><dagger></dagger>Levien did his work neither for us nor to satisfy any terms of any of our grants, and perhaps did not know of the existence of a relevant grant in the problem domain he was working on. His work just happened to be <em>exactly</em> what we had been requesting. Offered the face value of the grant via e-mail, he declined graciously.</small></p></li>
 <bounty></bounty>
 <marker></marker>
-<li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a><bux>($5,000)</bux> (<em><abbr title="Offered 2022-04-21.">claimed</abbr>; check link for details &amp; discussion</em>)<br/><span>Awardee: Khaled Hosny<dagger></dagger></span>
-      <ul class="grant-notes"><li><dagger></dagger><span>Presumptive; work is far along.</span></ul>
+<li class="bounty"><a href="https://github.com/sile-typesetter/sile/issues/1182#issuecomment-1105859541">SILE Variable Fonts Support</a><bux>($5,000)</bux> (<em><abbr title="Offered 2022-04-21.">completed</abbr></em>)<br/><span>Awardee: Khaled Hosny<dagger></dagger></span>
+      <ul class="grant-notes"><li><dagger></dagger><span>Merger did not take place in 2022 but the Foundation considers the bounty complete and has paid out.</span></ul>
 </li>
 <marker></marker>
 <li><s>Visual TrueType Rewrite</s> (<em>withdrawn</em>; see <em><a href="{%link _posts/foundation/2022-04-22-visual-truetype-rewrite.markdown %}">archived bid invite</a></em>)</li>
