Mark completed Grant № 8, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -64,7 +64,7 @@ layout: default_foundation
 <marker></marker>
 <li><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a><bux>($350)</bux> (<em><abbr title="Offered 2022-04-25.">completed</abbr></em>)<br/><span>Awardee: Khaled Hosny</span></li>
 <marker></marker>
-<li><span>MFEKglif Additional Pens API (<em>overdue</em>)</span><br/><span>Awardee: Matthew Blanchard</span></li>
+<li><span>MFEKglif Additional Pens API (<em>completed</em>)</span><br/><span>Awardee: Matthew Blanchard</span><small><p class="extended-comment">This work was PR'd to the relevant MFEK repositories in 2022 but not merged into <tt>v2</tt> until January 2023 and will not be merged into <tt>master</tt> by mutual consent until some time in 2023.</p></small></li>
 <marker></marker>
 <li><span>Upkeep of the Fediverse instance <a href="https://howlr.me">howlr.me</a> (<em>completed</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
 <marker></marker>
