Mark completed Grant № 10, Series of 2022

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -68,7 +68,7 @@ layout: default_foundation
 <marker></marker>
 <li><span>Upkeep of the Fediverse instance <a href="https://howlr.me">howlr.me</a> (<em>completed</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
 <marker></marker>
-<li><span>MFEK Serif Greek Expansion (<em>in progress</em>)</span><br/><span>Awardee: Indestructible Type LLC</span></li>
+<li><span>MFEK Serif Greek Expansion (<em>completed</em>)</span><br/><span>Awardee: Indestructible Type LLC</span></li>
 <marker></marker>
 <li><span><a href="https://github.com/lucasmerlin/egui_skia"><code>egui_skia.rlib</code></a> v1.0 (SDL2, OpenGL, Vulkan<dagger></dagger>) (<em>completed</em>)</span><br/><span>Awardee: Lucas Meurer</span>
       <ul class="grant-notes"><li><dagger></dagger><span>Stretch goal (<em>completed</em>).</span></li></ul>
