Strike Grant № 12, Series of 2022 (executive error)

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -74,7 +74,7 @@ layout: default_foundation
       <ul class="grant-notes"><li><dagger></dagger><span>Stretch goal (<em>completed</em>).</span></li></ul>
 </li>
 <marker></marker>
-<li><span>System administration work: <a href="https://mfek.jitsi.org">Jitsi Meet instance</a>; Mastodon←→Twitter bridge (<em>in progress</em>)</span><br/><span>Awardee: Cleveland Digital Self Defense Collective</span></li>
+<li><s><span>System administration work: <a href="https://mfek.jitsi.org">Jitsi Meet instance</a>; Mastodon←→Twitter bridge (<em>in progress</em>)</span><br/><span>Awardee: Cleveland Digital Self Defense Collective</span></s><small><p class="extended-comment">Due to an executive error, this grant was listed <em>prematurely</em>. It may be awarded in 2023, but was never paid out and circumstances of Naia Ōkami / at Howlr made awarding it in 2022 impossible. Nonwithstanding the foregoing, the MFEK Foundation Inc. owes CDSDC <em>something</em>, so barring Armageddon they will receive some grant in 2023 if they still want one.</p></small></li>
 <marker></marker>
 <li><span><a href="/misc/four-freedoms.html">The Four Freedoms of Free Software</a> artwork (<em>completed</em>)</span><br/><span>Awardee: LAV (@<a href="https://twitter.com/lilblucat">lilblucat</a>)</span></li>
 <marker class="TBD"></marker>
