Close the 2022 Grants and Donations series; open new 2023 series.

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -77,8 +77,15 @@ layout: default_foundation
 <li><s><span>System administration work: <a href="https://mfek.jitsi.org">Jitsi Meet instance</a>; Mastodon←→Twitter bridge (<em>in progress</em>)</span><br/><span>Awardee: Cleveland Digital Self Defense Collective</span></s><small><p class="extended-comment">Due to an executive error, this grant was listed <em>prematurely</em>. It may be awarded in 2023, but was never paid out and circumstances of Naia Ōkami / at Howlr made awarding it in 2022 impossible. Nonwithstanding the foregoing, the MFEK Foundation Inc. owes CDSDC <em>something</em>, so barring Armageddon they will receive some grant in 2023 if they still want one.</p></small></li>
 <marker></marker>
 <li><span><a href="/misc/four-freedoms.html">The Four Freedoms of Free Software</a> artwork (<em>completed</em>)</span><br/><span>Awardee: LAV (@<a href="https://twitter.com/lilblucat">lilblucat</a>)</span></li>
-<marker class="TBD"></marker>
-<li>TBD</li>
+</ol>
+<div class="series-end">
+      <span class="sc strong">end of series</span>
+</div>
+
+<h2>Series of 2023</h2>
+<ol class="grants 2023 spaced_out">
+      <marker class=TBD></marker>
+      <li>TBD</li>
 </ol>
 
 <h1>Donations</h1>
@@ -99,9 +106,23 @@ layout: default_foundation
             Caleb Maclennan (SILE developer <tt>@alerque</tt>) (GitHub) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 10 May 2022)</li>
       <marker></marker><li>
             Jonathon Thomas / OpenShot Studios, LLC (OpenShot developer <tt>@jonoomph</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 24 July 2022)</li>
-      <marker class=TBD></marker>
-<li>TBD</li>
 </ol>
+<div class="series-end">
+      <span class="sc strong">end of series</span>
+</div>
+
+<h2>Series of 2023</h2>
+<ol class="donations 2023 spaced_out">
+      <marker></marker><li>
+            Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (for February <bux>$300</bux>; since 1 March 2022)</li>
+      <marker></marker><li>
+            Caleb Maclennan (SILE developer <tt>@alerque</tt>) (GitHub) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 10 May 2022)</li>
+      <marker></marker><li>
+            Jonathon Thomas / OpenShot Studios, LLC (OpenShot developer <tt>@jonoomph</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 24 July 2022)</li>
+      <marker class=TBD></marker>
+      <li>TBD</li>
+</ol>
+
 <h1>GnuPG keys</h1>
 
 So far there is only one GnuPG key in use, for signing certain grants and bounty proposals—
