Remove repeated information

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -99,13 +99,13 @@ layout: default_foundation
       <marker></marker><li>
             Unicode Consortium — Adopt-a-Character (Gold): U+0051 ‹Q› — <bux>$5,000</bux></li>
       <marker></marker><li>
-            Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (for February <bux>$300</bux>; since 1 March 2022)</li>
+            Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em><bux>$1000</bux>/month</em> (for February <bux>$300</bux>; since 1 March 2022)</li>
       <marker></marker><li>
             Donk Enby (as part of a <a href="https://fundrazr.com/free-donk?ref=ab_2BL1U9_ab_48NtY9cTYmv48NtY9cTYmv">fundraising campaign</a> run by DDoS Secrets) — <bux><abbr title="(€1,000 + fees)">€1,081.72</abbr></bux></li>
       <marker></marker><li>
-            Caleb Maclennan (SILE developer <tt>@alerque</tt>) (GitHub) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 10 May 2022)</li>
+            Caleb Maclennan (SILE developer <tt>@alerque</tt>) (GitHub) — <em><bux>$1000</bux>/month</em> (since 10 May 2022)</li>
       <marker></marker><li>
-            Jonathon Thomas / OpenShot Studios, LLC (OpenShot developer <tt>@jonoomph</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 24 July 2022)</li>
+            Jonathon Thomas / OpenShot Studios, LLC (OpenShot developer <tt>@jonoomph</tt>) (Patreon) — <em><bux>$1000</bux>/month</em> (since 24 July 2022)</li>
 </ol>
 <div class="series-end">
       <span class="sc strong">end of series</span>
@@ -114,11 +114,11 @@ layout: default_foundation
 <h2>Series of 2023</h2>
 <ol class="donations 2023 spaced_out">
       <marker></marker><li>
-            Martin Owens (Inkscape developer <tt>@doctormo</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (for February <bux>$300</bux>; since 1 March 2022)</li>
+            <tt>@doctormo</tt> (<em>ongoing</em>; continuation from Series of 2022)</li>
       <marker></marker><li>
-            Caleb Maclennan (SILE developer <tt>@alerque</tt>) (GitHub) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 10 May 2022)</li>
+            <tt>@alerque</tt> (<em>ongoing</em>; continuation from Series of 2022)</li>
       <marker></marker><li>
-            Jonathon Thomas / OpenShot Studios, LLC (OpenShot developer <tt>@jonoomph</tt>) (Patreon) — <em>ongoing @ <bux>$1000</bux>/month</em> (since 24 July 2022)</li>
+            <tt>@jonoomph</tt> (<em>ongoing</em>; continuation from Series of 2022)</li>
       <marker class=TBD></marker>
       <li>TBD</li>
 </ol>
