List Grant № 0, Series of 2023

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -84,6 +84,8 @@ layout: default_foundation
 
 <h2>Series of 2023</h2>
 <ol class="grants 2023 spaced_out">
+      <marker></marker>
+      <li>MFEKglif <tt>egui</tt> port from Dear ImGui (<em>in progress</em>)<br/>Awardee: Matthew Blanchard</li>
       <marker class=TBD></marker>
       <li>TBD</li>
 </ol>
